add runtime fix security config
